# BitVM

./: .env.sample  .env.test.sample  .gitignore  .rustfmt.toml  1-bit_commitment.md  2-bit_commitment.md  Cargo.toml  DEMO_INSTRUCTIONS.md  LICENSE  README.md  equivocation.md  u32-addition.md  u32_addition_8.md  u32_rrot12_8.md  u32_rrot7_8.md  u32_rrot8_8.md  u32_xor_8.md  u8_state.md  u8_xor.md
bitvm/: Cargo.toml  bitvm-client.js  bitvm-graph.js  bitvm-player.js  bitvm.js  cargo.toml  client.js  constants.js  graph.js  merkle-read.js  merkle-sequence.js  merkle-write.js  model.js  trace-sequence.js  trace.js  vm.js  wots-test-vectors.json
bitvm/docs/: sidechain_bridges.md
bitvm/merkle/: generate.html  read.js  write-c1.js  write-c2.js  write-c3.js  write-c4.js  write-c5.js  write-graph.js  write-prev.js  write.js
bitvm/src/: client.rs  dummy_program.rs  graph.rs  instructions.rs  lib.rs  main.rs  merkletree.rs  model.rs  pseudo.rs  trace.rs  vm.rs
bitvm/src/bigint/: add.rs  bits.rs  cmp.rs  inv.rs  mod.rs  mul.rs  std.rs  sub.rs
bitvm/src/bn254/: ell_coeffs.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g1p.rs  g2.rs  g2_sg_check.rs  g2_subgroup_check.rs  mod.rs  msm.rs  pairing.rs  utils.rs
bitvm/src/chunk/: README.md  api.rs  api_compiletime_utils.rs  api_runtime_utils.rs  assert.rs  assigner.rs  assigners.rs  blake3compiled.rs  compile.rs  element.rs  elements.rs  g16_runner_core.rs  g16_runner_utils.rs  helpers.rs  mod.rs  norm_fp12.rs  primitives.rs  segment.rs  taps_ext_miller.rs  taps_msm.rs  taps_mul.rs  taps_point_ops.rs  taps_premiller.rs  taps_test.rs  wots.rs  wrap_hasher.rs  wrap_wots.rs
bitvm/src/chunker/: assigner.rs  chunk_accumulator.rs  chunk_evaluate_line.rs  chunk_fq12_multiplication.rs  chunk_g1_points.rs  chunk_groth16_verifier.rs  chunk_hinted_accumulator.rs  chunk_msm.rs  chunk_non_fixed_point.rs  chunk_scalar_mul.rs  common.rs  disprove_execution.rs  elements.rs  segment.rs
bitvm/src/clementine/: additional_disprove.rs  mod.rs  utils.rs
bitvm/src/groth16/: constants.rs  g16.rs  mod.rs  offchain_checker.rs  test.rs  verifier.rs
bitvm/src/hash/: blake3.rs  blake3_u4.rs  blake3_u4_compact.rs  blake3_utils.rs  mod.rs  ripemd160.rs  sha1.rs  sha256.rs  sha256_official_test_vectors.json  sha256_test_utils.rs  sha256_u4.rs  sha256_u4_stack.rs
bitvm/src/merkle/: mod.rs  read.rs  write.rs  write_prev.rs
bitvm/src/signatures/: mod.rs  public.rs  signing_winternitz.rs  utils.rs  winternitz.rs  winternitz_hash.rs  wots.rs  wots_api.rs
bitvm/src/u32/: mod.rs  u32_add.rs  u32_and.rs  u32_or.rs  u32_rrot.rs  u32_rshift.rs  u32_std.rs  u32_xor.rs  u32_zip.rs
bitvm/src/u4/: mod.rs  u4_add.rs  u4_add_stack.rs  u4_logic.rs  u4_logic_stack.rs  u4_rot.rs  u4_rot_stack.rs  u4_shift.rs  u4_shift_stack.rs  u4_std.rs
bitvm/tests/: graph.rs  instructions.rs  model.rs  vm.rs
bitvm/tests/common/: mod.rs
bridge/: Cargo.toml
bridge/src/: commitments.rs  common.rs  constants.rs  error.rs  lib.rs  proof.rs  scripts.rs  serialization.rs  superblock.rs  utils.rs
bridge/src/client/: client.rs  esplora.rs  files.rs  memory_cache.rs  mod.rs
bridge/src/connectors/: base.rs  connector_0.rs  connector_1.rs  connector_2.rs  connector_3.rs  connector_4.rs  connector_5.rs  connector_6.rs  connector_a.rs  connector_b.rs  connector_c.rs  connector_d.rs  connector_e.rs  connector_f_1.rs  connector_f_2.rs  connector_z.rs  mod.rs
bridge/src/contexts/: base.rs  depositor.rs  operator.rs  verifier.rs  withdrawer.rs
bridge/src/graphs/: base.rs  peg_in.rs  peg_out.rs
bridge/src/transactions/: assert.rs  base.rs  challenge.rs  disprove.rs  disprove_chain.rs  kick_off_1.rs  kick_off_2.rs  kick_off_timeout.rs  mod.rs  peg_in_confirm.rs  peg_in_deposit.rs  peg_in_refund.rs  peg_out.rs  peg_out_confirm.rs  pre_signed.rs  pre_signed_musig2.rs  signing.rs  signing_musig2.rs  signing_winternitz.rs  start_time.rs  start_time_timeout.rs  take_1.rs  take_2.rs
bridge/tests/bridge/: faucet.rs  helper.rs  mod.rs  setup.rs
final-spv/: Cargo.toml  README.md  build.dockerfile
final-spv/final-spv-guest/: Cargo.toml  build.rs
final-spv/final-spv-guest/guest/: Cargo.toml
final-spv/src/: final_circuit.rs  lib.rs  merkle_tree.rs  spv.rs  transaction.rs  utils.rs  zkvm.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: blake3.rs  sha256.rs
fuzz/fuzz_targets/bigint/: bigint_transform.rs  lib.rs  macros.rs  utils.rs
header-chain/: Cargo.toml  README.md  build.dockerfile
header-chain/header-chain-guest/: Cargo.toml  build.rs
header-chain/header-chain-guest/guest/: Cargo.toml
header-chain/src/: header_chain.rs  lib.rs  mmr_guest.rs  mmr_native.rs
prover/: Cargo.toml  README.md
prover/elfs/: final-spv-guest  mainnet-final-spv-guest  mainnet-header-chain-guest  regtest-final-spv-guest  regtest-header-chain-guest  signet-final-spv-guest  signet-header-chain-guest  testnet4-final-spv-guest  testnet4-header-chain-guest
prover/src/: docker.rs  lib.rs  main.rs
scripts/: Cargo.toml  compile.js  justice-leaf.js  player.js  transaction.js  utils.js
scripts/docs/: schnorr_bit_commitment.md
scripts/examples/: blake3.js  blake3_160.js  byte_commitment.js  hash_commitment.js  simple.bs  sum.js
scripts/opcodes/: blake3.js  opcodes.js  pseudo-opcodes.js  std.js  u160_std.js  u256_std.js  u32_add.js  u32_and.js  u32_cmp.js  u32_or.js  u32_rrot.js  u32_shift.js  u32_state.js  u32_std.js  u32_sub.js  u32_xor.js  u32_zip.js
scripts/src/: actor.rs  leaf.rs  lib.rs  transaction.rs
scripts/src/opcodes/: bits.rs  blake3.rs  bytes.rs  mod.rs  pseudo.rs  u160_std.rs  u256_std.rs  u32_add.rs  u32_and.rs  u32_cmp.rs  u32_mul.rs  (+6 more)
scripts/tests/: actor.rs  blake3.rs  bytes.rs  u160_std.rs  u32_add.rs  u32_mul.rs  u32_state.rs  u32_std.rs  vec.rs
tapscripts/: Cargo.toml
tapscripts/docs/: readme.md  u32_rrot16_8.md  u8_xor.md
tapscripts/src/: actor.rs  lib.rs  transaction.rs
tapscripts/tests/: actor.rs  blake3.rs  bytes.rs  u160_std.rs  u256_add.rs  u256_cmp.rs  u256_zip.rs  u32_add.rs  u32_mul.rs  u32_state.rs  u32_std.rs  u32_sub.rs  ubigint.rs  uint.rs  vec.rs
(+772 files in other folders)
