[package]
name = "bitvm"
version = "0.1.0"
edition = "2021"
exclude = ["tests"]

[dependencies]
#bitcoin-script = { path = "../rust-bitcoin-script"}
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script", branch= "chunker" }
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std"]}
strum = "0.26"
strum_macros = "0.26"
hex = "0.4.3"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
serde = { version = "1.0.197", features = ["derive"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
ark-bn254 = { git = "https://github.com/Antalpha-Labs/algebra/", features = ["curve"], default-features = false }
ark-ff = { git = "https://github.com/Antalpha-Labs/algebra/" }
ark-ec = { git = "https://github.com/Antalpha-Labs/algebra/" }
ark-groth16 = { git = "https://github.com/Antalpha-Labs/groth16" }
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client" }
serde_json = "1.0.116"
lazy_static = "1.4.0"
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"}
rand = "0.8.5"
rand_chacha = "0.3.1"
once_cell = "1.19.0"
blake3 = "=1.5.1"

[dev-dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
ark-std = { version = "0.4.0", default-features = false, features = ["print-trace"] }
ark-crypto-primitives = { git = "https://github.com/Antalpha-Labs/crypto-primitives", features = ["snark", "sponge"] }
ark-relations = { git = "https://github.com/Antalpha-Labs/snark/" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[patch.crates-io]
base58check = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin_hashes = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-internals = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-io = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-units = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}

ark-ff = { git = "https://github.com/Antalpha-Labs/algebra/" }
ark-ec = { git = "https://github.com/Antalpha-Labs/algebra/" }
ark-poly = { git = "https://github.com/Antalpha-Labs/algebra/" }
ark-serialize = { git = "https://github.com/Antalpha-Labs/algebra/" }
ark-bn254 = { git = "https://github.com/Antalpha-Labs/algebra/", features = ["curve"], default-features = false }

ark-r1cs-std = { git = "https://github.com/Antalpha-Labs/r1cs-std/" }
ark-crypto-primitives = { git = "https://github.com/Antalpha-Labs/crypto-primitives/" }

ark-relations = { git = "https://github.com/Antalpha-Labs/snark/" }
ark-snark = { git = "https://github.com/Antalpha-Labs/snark/" }
ark-groth16 = { git = "https://github.com/Antalpha-Labs/groth16" }
