[workspace]
resolver = "2"
members = [
    "bitvm",
    "bridge",
    "fuzz",
    "header-chain",
    "header-chain/header-chain-guest",
    "final-spv",
    "final-spv/final-spv-guest",
    "prover",
]

default-members = [
    "bitvm",
    "bridge",
    "fuzz",
]

[workspace.dependencies]
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin = { version = "0.32.5", features = ["rand-std"] }
strum = "0.27"
strum_macros = "0.27"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }
serde = { version = "1.0.197", features = ["derive"] }
num-traits = "0.2.18"
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client" }
serde_json = "1.0.116"
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack" }
rand = "0.8.5"
rand_chacha = "0.3.1"
dotenv = "0.15.0"
aws-sdk-s3 = "1.40.0"
regex = "1.10.5"
blake3 = "1.6.1"
paste = "1.0.15"
musig2 = { version = "0.1.0", features = ["serde", "rand"] }
futures = "0.3.30"
async-trait = "0.1.81"
suppaftp = { version = "6.0.1", features = ["async", "async-native-tls"] }
openssh-sftp-client = { version = "0.14.6", features = ["openssh"] }
openssh = { version = "0.10.4", features = ["native-mux"] }
alloy = { version = "0.2.1", features = ["full"] }
clap = { version = "4.5.23", features = ["derive", "cargo", "env"] }
toml = "0.5.11"
colored = "2.0.0"
itertools = "0.13.0"
serde-big-array = "0.5.1"
num-bigint = { version = "0.4.4", features = ["rand"] }
ark-std = { version = "0.5.0", default-features = false, features = ["print-trace"] }
ark-crypto-primitives = { version = "0.5.0", features = ["snark", "sponge"] }
ark-relations = "0.5.0"
serial_test = "*"
tqdm = "0.7"
secp256k1 = { version = "0.29.1", features = ["global-context"]}
derive_more = "2.0"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
