[package]
name = "final-spv"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = {version = "2.0.2", default-features = false, features = ["std"]}
borsh = {version = "1.5.3", features = ["derive"] }
sha2 =  { version = "0.10.8", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }
blake3 = { version = "1.5.0", default-features = false }
bitcoin = "0.32.5"
serde = { version = "1.0", default-features = false }
header-chain = { path = "../header-chain" }

[dev-dependencies]
hex-literal = "0.4.1"
