[package]
name = "bitvm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.4.1"
libfuzzer-sys = "0.4"
bitvm = { path = "../bitvm", features = ["fuzzing"] }
blake3 = "=1.5.1"
bitcoin = { version = "0.32.5" }
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack" }

[[bin]]
name = "blake3"
path = "fuzz_targets/blake3.rs"
test = false
doc = false
bench = false
