[package]
name = "bitvm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
libfuzzer-sys = "0.4"
bitvm = { path = "../bitvm", features = ["fuzzing"] }
blake3 = "=1.5.1"
bitcoin = { version = "0.32.5" }
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack" }
sha2 = "0.10.8"

[[bin]]
name = "blake3"
path = "fuzz_targets/blake3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sha256"
path = "fuzz_targets/sha256.rs"
test = false
doc = false
bench = false
