[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin = { git = "https://github.com/stevenroose/rust-bitcoin", rev = "639d552ef0080a68b1ea883298aa30c450d9ff0d" }
bitvm_macros = { git = "https://github.com/BitVM/BitVM_macros" }
strum = "0.26"
strum_macros = "0.26"
hex = "0.4.3"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
